# mpi_scalapack_stub

./: CMakeLists.txt  README.md  options.cmake
.github/workflows/: ci.yml
Example/: CMakeLists.txt  main.c
cmake/: DllTestPath.cmake  config.cmake.in  install.cmake  options.cmake
example/: CMakeLists.txt  main.c  main.cpp  main.f90
src/: CMakeLists.txt  mpi.f90  mpi.h  mpic.c
